# extended-reals

./: .travis.yml  CHANGELOG.markdown  LICENSE  README.md  appveyor.yml  extended-real.cabal  extended-reals.cabal  stack-ghc-8.2.yaml  stack.yaml
.github/workflows/: build.yaml  haskell-ci.yml
src/Data/: ExtendedReal.hs
test/: TestExtendedReal.hs
