name:                extended-reals
version:             0.2.7.0
synopsis:            Extension of real numbers with positive/negative infinities
description:
  Extension of real numbers with positive/negative infinities (±∞).
  It is useful for describing various limiting behaviors in mathematics.
homepage:            https://github.com/msakai/extended-reals/
license:             BSD3
license-file:        LICENSE
author:              Masahiro Sakai
maintainer:          masahiro.sakai@gmail.com
category:            Math
build-type:          Simple
extra-source-files:  CHANGELOG.markdown
cabal-version:       >=1.10
bug-reports:         https://github.com/msakai/extended-reals/issues
tested-with:
   GHC ==8.6.5
   GHC ==8.8.4
   GHC ==8.10.7
   GHC ==9.0.2
   GHC ==9.2.8
   GHC ==9.4.8
   GHC ==9.6.7
   GHC ==9.8.4
   GHC ==9.10.2
   GHC ==9.12.2

source-repository head
  type:     git
  location: https://github.com/msakai/extended-reals.git

library
  exposed-modules:     Data.ExtendedReal
  other-extensions:    DeriveDataTypeable
  build-depends:
    base >=4.12 && <5,
    deepseq >=1.3 && <1.6,
    hashable >=1.2 && <1.6,
    template-haskell <3
  hs-source-dirs:      src
  default-language:    Haskell2010

Test-suite TestExtendedReal
  Type:              exitcode-stdio-1.0
  HS-Source-Dirs:    test
  Main-is:           TestExtendedReal.hs
  Build-depends:
     base,
     deepseq,
     HUnit >=1.2 && <1.7,
     QuickCheck >=2.6 && <2.16,
     tasty >=0.10.1,
     tasty-hunit >=0.9 && <0.11,
     tasty-quickcheck >=0.8 && <0.12,
     tasty-th,
     extended-reals
  Default-Language: Haskell2010
  Other-Extensions:
     TemplateHaskell
     ScopedTypeVariables
